Update test.yml - explicit empty permissions for the job 'check'

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,6 +124,7 @@ jobs:
     needs:
       - coverage-combine
     runs-on: ubuntu-latest
+    permissions: {}
     steps:
       - name: Dump GitHub context
         env:
